@startuml
'https://plantuml.com/class-diagram
left to right direction

entity sku {
    id
    code
    name
    description
    maximum_on_shelf
    minimum_on_shelf
    maximum_in_warehouse
    minimum_in_warehouse
    created_at
    updated_at
}

entity inventory {
    id
    sku_id
    type
    quantity
    created_at
    updated_at
}

entity inventory_change_record {
    id
    inventory_id
    operation_type
    previous_quantity
    new_quantity
    created_at
    notes
}

inventory --> sku
inventory_change_record --> inventory
@enduml